Add language and expansion caches
